--- a/UnrealFest/views/lobby.html
+++ b/UnrealFest/views/lobby.html
@@ -92,7 +92,7 @@
         console.log('Connected to the server');
     });
 
-    socket.on('startGame', () => {
+    socket.on('StartGame', () => {
         window.location.href = 'game.html';
     });
 
