--- a/UnrealFest/views/index.html
+++ b/UnrealFest/views/index.html
@@ -89,7 +89,8 @@
         .rounded-textfield:focus {
             border-color: #66afe9;
             box-shadow: 0 0 5px rgba(102, 175, 233, 0.5);
-            font-family: ArialHelvetica;
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 30;
         }
 
         .validate-button {
