UI / responsivness adjustments

--- a/UnrealFest/views/game.html
+++ b/UnrealFest/views/game.html
@@ -168,8 +168,8 @@
 
     .top-left-image {
         position: absolute;
-        top: 10%;
-        left: 8%;
+        top: 4%;
+        left: 4%;
         max-width: 20%;
         height: auto;
         z-index: 4;
@@ -177,7 +177,7 @@
 
     .bottom-right-button {
         position: absolute;
-        bottom: 1%;
+        bottom: 4%;
         right: 1%;
         padding: 10px 20px;
         background-color: transparent;
@@ -208,7 +208,7 @@
         }
 
         .bottom-right-button {
-            bottom: 1%;
+            bottom: 4%;
             right: 1%;
             background-color: transparent;
         }
@@ -253,7 +253,7 @@
         svgText.textContent = `${percentage}%`;
 
         // Optionally, adjust the font size based on the percentage
-        const fontSize = 10 + (percentage / 10); // Example scaling
+        const fontSize = 30; // Example scaling
         svgText.setAttribute('font-size', fontSize);
     }
 
