--- a/UnrealFest/views/lobby.html
+++ b/UnrealFest/views/lobby.html
@@ -117,7 +117,7 @@
         const text = document.getElementById("welcome-text");
             cookies = data;
             const teamicon = document.getElementById("overlay");
-            text.textContent = `Welcome, ${cookies.login}`;
+            text.textContent = `Welcome ${cookies.login}`;
             if (data.team) {
                 team = data.team;
             }
